<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_xbox_teleop</name>
  <version>0.1.0</version>
  <description>Xbox controller teleop for TurtleBot3 in Gazebo with brake and haptic feedback</description>
  <maintainer email="prakasharyan25@gmail.com">Prakash Aryan</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
